--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stage-three-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://isonguyom.github.io/hngx-stage-three-task",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.0.0"
   }
 }
